--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,86 @@
 /*  your css code here. If applicable */
+body {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #f6f7fb;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+	max-width: 400px;
+	width: 100%;
+	/* background-color: grey; */
+}
+
+.container .steps {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: relative;
+}
+
+.steps .circle{
+	width: 40px;
+	height: 40px;
+	display: flex;
+	color: #999;
+	font-size: 22px;
+	font-weight: 500;
+	/* background: green; */
+	justify-content: center;
+	background: #ffff;
+	align-items: center;
+	border-radius: 50%;
+	border: 4px solid #e0e0e0;
+	transition: all 200ms ease;
+}
+
+.steps .circle.active {
+	border-color: #4070f4;
+	/* color: #4070f4; */
+}
+
+.steps .progress-bar {
+	position: absolute;
+	height: 4px;
+	width: 100%;
+	background-color: #e0e0e0;
+	z-index: -1;
+} 
+
+.progress-bar .indicator {
+	width: 0%;
+	height: 100%;
+	position: absolute;
+	background: #4070f4;
+	transition: all 300ms ease;
+}
+
+.container .buttons {
+	display: flex;
+	gap: 20px;
+}
+
+.buttons button {
+	padding: 8px 25px;
+	background: #4070f4;
+	border: none;
+	border-radius: 8px; 
+	color: #fff;
+	font-size: 16px;
+	font-weight: 400;
+	cursor: pointer;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+}
+
+.buttons button:disabled {
+	background: #87a5f8;
+	cursor: not-allowed;
+}
